@@ -2,6 +2,8 @@ ChangeLog for pommed
 --------------------
 
 version 1.22:
+	- pommed: do not probe for LMU controller on pmac machines that do
+	not have a backlit keyboard. Avoids a spurious error message.
 
 version 1.21:
 	- gpomme: use compositing if available, patch by Soeren Sonnenburg.
